--- a/src/index.css
+++ b/src/index.css
@@ -93,3 +93,55 @@ button:focus-visible {
 #horz-div>input{
   width: 25vw;
 }
+
+form{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  gap: 0.5em;
+}
+form div{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 1em;
+}
+form div>input{
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: #1a1a1a;
+  cursor: pointer;
+  transition: border-color 0.25s;
+  width: 5em;
+}
+form label{
+  font-size: 1.2em;
+  font-weight: 500;
+  font-family: inherit;
+  width: 3em;
+  
+}
+/*form submit button*/
+input[type=submit] {
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: #1a1a1a;
+  cursor: pointer;
+  transition: border-color 0.25s;
+  width: 5em;
+}
+
+input[type=submit]:hover {
+  border-color: #646cff;
+}
