--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,7 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+  
 }
 
 a {
@@ -29,6 +30,7 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  font-style: italic;
 }
 
 h1 {
@@ -40,9 +42,10 @@ button {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
-  font-size: 1em;
+  font-size: 1.3em;
   font-weight: 500;
   font-family: inherit;
+  font-style: italic;
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
@@ -68,6 +71,7 @@ button:focus-visible {
   }
 }
 
+
 #vert-div{
   display: flex;
   flex-direction: column;
@@ -78,7 +82,7 @@ button:focus-visible {
 }
 
 #vert-div>button{
-  min-width: 8rem;
+  min-width: 10rem;
 }
 
 #horz-div{
@@ -113,16 +117,16 @@ form div>input{
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
-  font-size: 1em;
+  font-size: 1.3em;
   font-weight: 500;
   font-family: inherit;
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
-  width: 5em;
+  width: 3em;
 }
 form label{
-  font-size: 1.2em;
+  font-size: 1.3em;
   font-weight: 500;
   font-family: inherit;
   width: 3em;
@@ -133,15 +137,29 @@ input[type=submit] {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
-  font-size: 1em;
+  font-size: 1.3em;
   font-weight: 500;
   font-family: inherit;
+  font-style: italic;
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
-  width: 5em;
+  width: 6em;
 }
 
 input[type=submit]:hover {
   border-color: #646cff;
+}
+
+.time{
+  font-size: 4em;
+}
+.red{
+  color: red;
+}
+.top-left{
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding-left: 30px;
 }
