--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,8 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+
+
   
 }
 
@@ -31,6 +33,8 @@ body {
   min-width: 320px;
   min-height: 100vh;
   font-style: italic;
+  height: 100vh; /* Fallback for browsers that do not support Custom Properties */
+  height: calc(var(--vh, 1vh) * 100);
 }
 
 h1 {
