--- a/src/index.css
+++ b/src/index.css
@@ -12,11 +12,9 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
-  height: -webkit-fill-available;
+
 }
 
-  
-}
 
 a {
   font-weight: 500;
@@ -32,7 +30,7 @@ body {
   display: flex;
   place-items: center;
   min-width: 320px;
-  min-height: 100vh;
+  min-height: 100dvh;
   font-style: italic;
 }
 
