--- a/src/index.css
+++ b/src/index.css
@@ -59,7 +59,7 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
+/* @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
     background-color: #ffffff;
@@ -70,7 +70,7 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-}
+} */
 
 
 #vert-div{
@@ -97,6 +97,13 @@ button:focus-visible {
 
 #horz-div>input{
   width: 25vw;
+}
+
+img{
+  width: 100%;
+  max-width: 480px;
+  height: auto;
+  object-fit: contain;
 }
 
 form{
