--- a/src/index.css
+++ b/src/index.css
@@ -168,7 +168,8 @@ input[type=submit]:hover {
 
 
 .time{
-  font-size: 4em;
+  font-size: 17vw;
+  /* font-size: 10rem; */
 }
 .red{
   color: red;
