--- a/src/index.css
+++ b/src/index.css
@@ -180,3 +180,11 @@ input[type=submit]:hover {
   left: 0;
   padding-left: 30px;
 }
+
+.bottom-right{
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  padding: 30px;
+  width: 50px;
+}
