--- a/src/index.css
+++ b/src/index.css
@@ -188,3 +188,10 @@ input[type=submit]:hover {
   padding: 30px;
   width: 50px;
 }
+
+.back{
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 30px;
+}
